--- a/projects.html
+++ b/projects.html
@@ -311,12 +311,21 @@
 
             <div class="card">
               <h2>Sentiment Analysis across customer journey</h2>
-              <p>
-                <b>Solution:</b> To understand customer satisfaction across customer journey.
-                <br />
-                <b>Use case:</b> Customer service department
-                 of large shipping company.
+              <b>Solution:</b>
+              <p id="c10_1">
+                Understand the emotions of customers on each stage of each customer journey and respond appropriately.
               </p>
+              <p id="c10_2">
+                Dig deeper into the causes of dissatisfaction and increase customer satisfaction more deeply.
+              </p>
+              <p id="c10_3">
+                Identify bottlenecks and provide right solution to improve customer loyalty.
+              </p> 
+              <p id="c10_4">
+                Client: Transportation company (Customer service department)
+
+              </p> 
+
               <a
                 href="/contents_resources/images/sentiment_analysis.png"
                 target="_blank"
@@ -641,6 +650,16 @@
       var ja09_3 = "消費者のニーズに合わせて新製品の機会と需要の発見";
       var ja09_4 = "お客様情報：電子機械メーカー";
 
+      var en10_1 = "Understand the emotions of customers on each stage of each customer journey and respond appropriately.";
+      var en10_2 = "Dig deeper into the causes of dissatisfaction and increase customer satisfaction more deeply."; 
+      var en10_3 = "Identify bottlenecks and provide right solution to improve customer loyalty.";
+      var en10_4 = "Client: Transportation Company (Customer Service Department)";
+     
+      var ja10_1 = "各カスタマージャーニーのステージの顧客の感情を把握し、適切対応が可能。";
+      var ja10_2 = "不満の原因を掘り下げて、より深く顧客満足度を高められる。";
+      var ja10_3 = "ボトルネックを見つけて、顧客ロイヤルティの向上。";
+      var ja10_4 = "お客様情報：日本の運輸企業（顧客サービス部）";
+
       var en10_2_1 = "Supporting sales team by understanding reason of success and fail sales approach.";
       var en10_2_2 = "Increase efficiency by identify priority list and suitable strategy."; 
       var en10_2_3 = "Understand successful pattern for each customer segment.";
@@ -649,7 +668,7 @@
       var ja10_2_1 = "営業支援のために、応対履歴のデータより、成約要因／解約要因を把握します。";
       var ja10_2_2 = "優先リストと最適な戦略を作成してアウトバウンド業務を効率化。";
       var ja10_2_3 = "顧客のセグメントと組み合わせて成功パターンを分析します。";
-      var ja10_2_4 = "お客様情報：日本の車メーカー（営業部門）";
+      var ja10_2_4 = "お客様情報：日本の自動車メーカー（営業部門）";
 
       var en16_1 = "Improve and speed up PDCA cycle by preparing faculty and student evaluation system.";
       var en16_2 = "Understand student performance, characteristics and needs to provide best learning support."; 
@@ -676,7 +695,12 @@
           c09_2.textContent = en09_2;
           c09_3.textContent = en09_3;
           c09_4.textContent = en09_4;
-         
+
+          c10_1.textContent = en10_1;
+          c10_2.textContent = en10_2;
+          c10_3.textContent = en10_3;
+          c10_4.textContent = en10_4;
+
           c10_2_1.textContent = en10_2_1;
           c10_2_2.textContent = en10_2_2;
           c10_2_3.textContent = en10_2_3;
