--- a/projects.html
+++ b/projects.html
@@ -722,6 +722,11 @@
           c09_3.textContent = ja09_3; 
           c09_4.textContent = ja09_4; 
 
+          c10_1.textContent = ja10_1;
+          c10_2.textContent = ja10_2;
+          c10_3.textContent = ja10_3;
+          c10_4.textContent = ja10_4;
+
           c10_2_1.textContent = ja10_2_1;
           c10_2_2.textContent = ja10_2_2;
           c10_2_3.textContent = ja10_2_3;
