--- a/skills.html
+++ b/skills.html
@@ -320,10 +320,10 @@
 										<tr>
 											<td>
 											<b>Language</b> <br>
-											Thai               ★ ★ ★ ★ ★<br>
-											English            ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
-											Japanese           ★ ★ ★ <span style="color: gray;"> ★ ★</span> <br>
-											Chinese (Mandarin) ★ ★ <span style="color: gray;"> ★ ★ ★</span>	
+											Thai：               ★ ★ ★ ★ ★　（NATIVE）<br>
+											English：            ★ ★ ★ ★ <span style="color: gray;">★</span> （TOEIC 980） <br>
+											Japanese：           ★ ★ ★    <span style="color: gray;"> ★ ★</span> （JLPT N2） <br>
+											Chinese (Mandarin)： ★ ★ <span style="color: gray;"> ★ ★ ★</span>	（HSK LV4）
 										</tr>
 										<tr>
 											<td>
