--- a/skills.html
+++ b/skills.html
@@ -189,7 +189,7 @@
 											<td>
 												<a href="https://www.worksid.co.jp/" target="_blank">
 													Works ID Co., Ltd. &#127760;</a> Japan <br>
-												Role: Senior Data Science, BI Developer, Cloud Engineer<br>
+												Role: BI Developer, Data Scientist, Cloud Engineer<br>
 												4 years	(Present)										
 											</td>
 										</tr>
@@ -222,7 +222,7 @@
 								<br><br><br>
 
 								<section>
-									<h1>Special Training</h1>
+									<h1>Technical Training</h1>
 									<div class="table-wrapper">
 										<table class="alt">
 											<tbody>
