--- a/blog.html
+++ b/blog.html
@@ -334,7 +334,7 @@
 								<img src="/contents/tutorial/img/s-analysis_logo_01.png" width="50">
 								<img src="/contents/tutorial/img/logo_white.png" width="200">
 								<br>
-							      Articles related to Data science, Machine Learning, Deep Learning and more... with explaination adn code. 
+							      Articles related to Data science, Machine Learning, Deep Learning and more... with explaination and code. 
 								<br>
 								<a href="https://data-analysis-stats.jp/#blog" target="_blank">
 									data-analysis-stats.jp</a>
