update skills add Azure AI Engineer badge

--- a/skills.html
+++ b/skills.html
@@ -214,6 +214,7 @@
 								<h1>Certification</h1>
 								<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/azure-data-scientist-associate-600x600.png" style="width:150px;" alt="" />
+								<img src="images/Badges/azure-ai-engineer-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/azure-fundamentals-600x600 (1).png" style="width:100px;" alt="" />
 								<img src="images/Badges/azure-data-fundamentals-600x600.png" style="width:100px;" alt="" />
 								<img src="images/Badges/azure-ai-fundamentals-600x600.png" style="width:100px;" alt="" />
