--- a/skills.html
+++ b/skills.html
@@ -220,6 +220,8 @@
 								<img src="images/Badges/azure-ai-fundamentals-600x600.png" style="width:100px;" alt="" />
 								<img src="images/Badges/CERT-Fundamentals-Power-Platform.png" style="width:100px;" alt="" />
 								<img src="images/Badges/security-compliance-and-identity-fundamentals-600x600.png" style="width:100px;" alt="" />
+								<br><br>
+								<img src="images/Badges/UiPath-Certification_RPA-Fundamental.png" style="width:110px;" alt="" />
 								<br><br><br>
 
 								<section>
