--- a/skills.html
+++ b/skills.html
@@ -314,7 +314,7 @@
 												<table class="alt">
 													<thead>
 														<tr>
-															<th>Prizes</th>
+															<th>Medals</th>
 															<th>Competitions</th>
 														</tr>
 													</thead>
