--- a/contacts.html
+++ b/contacts.html
@@ -100,7 +100,7 @@
 							<h2 class="major">Get in touch</h2>
 							<ul class="contact">
 								<li>
-									<img src="images/jingwora.png" width="200" />
+									<img src="images/jingwora_02.jpg" width="200" />
 								</li>
 								<li class="icon solid fa-home">
 									Tokyo Japan
