--- a/contacts.html
+++ b/contacts.html
@@ -97,7 +97,7 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
+							<h2 class="major">GET IN TOUCH</h2>
 							<ul class="contact">
 								<li>
 									<img src="images/jingwora_02.jpg" width="200" />
