--- a/skills.html
+++ b/skills.html
@@ -319,13 +319,29 @@
 														</tr>
 													</thead>
 													<tbody>
+
+														<tr>
+															<td>
+															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
+															  <br> Bronze
+															</td>
+														    <td>
+																<a href="https://www.kaggle.com/c/tensorflow-great-barrier-reef" target="_blank">
+																	TensorFlow - Help Protect the Great Barrier Reef &#127760;</a>
+																 (Detect crown-of-thorns starfish in underwater image data)
+															    <br> [Computer Vision] [Object Detection]	
+														    </td>
+													    </tr>
+
 														<tr>
 															<td>
 																<img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
 																<br> Bronze
 															</td>
 															<td>
-																Happywhale - Whale and Dolphin Identification (Identify whales and dolphins by unique characteristics)
+																<a href="https://www.kaggle.com/c/happy-whale-and-dolphin" target="_blank">
+																	 Happywhale - Whale and Dolphin Identification &#127760;</a>
+																	 (Identify whales and dolphins by unique characteristics)
 																<br> [Computer Vision] [Image Classification]
 														    </td>
 														</tr>
@@ -336,18 +352,9 @@
 															  <br> Bronze
 															</td>
 														    <td>
-																TensorFlow - Help Protect the Great Barrier Reef (Detect crown-of-thorns starfish in underwater image data)
-															    <br> [Computer Vision] [Object Detection]	
-														    </td>
-													    </tr>
-
-														<tr>
-															<td>
-															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
-															  <br> Bronze
-															</td>
-														    <td>
-																Ubiquant Market Prediction (Make predictions against future market data)
+																<a href="https://www.kaggle.com/competitions/ubiquant-market-prediction" target="_blank">
+																	Ubiquant Market Prediction &#127760;</a>
+																 (Make predictions against future market data)
 															    <br> [Tabular Data] [Timeseries]
 															</td>
 													    </tr>
