Add Blog Kaggle-Competition-List

--- a/blog.html
+++ b/blog.html
@@ -98,6 +98,26 @@
 				<div class="card_item">
 					<div class="card_inner">
 					  <div class="card_top">
+						<img src="/contents_resources/images/blog/Kaggle-Competition-List.png" class="responsive" />
+					  </div>
+					  <div class="card_bottom">
+						<div class="card_info">
+						  <p class="title">Kaggle Competition List</p>
+						  <p>List of Kaggle Competions by category
+							<a href="/contents/articles/Kaggle-Competition-List.html" target="_blank">
+						    <br> LINK</a>
+						  </p>
+						</div>
+						<div class="card_category">＃Kaggle </div>
+						<div class="card_creator">by jingwora</div>
+					  </div>
+					</div>
+				</div>
+
+
+				<div class="card_item">
+					<div class="card_inner">
+					  <div class="card_top">
 						<img src="/contents_resources/images/blog/feature-scaling.png" class="responsive" />
 					  </div>
 					  <div class="card_bottom">
