--- a/contacts.html
+++ b/contacts.html
@@ -99,16 +99,13 @@
 						<div class="inner">
 							<h2 class="major">GET IN TOUCH</h2>
 							<ul class="contact">
-								<li>
-									<img src="images/jingwora_02.jpg" width="200" />
-								</li>
-								<li class="icon solid fa-home">
-									Tokyo Japan
-								</li>
-								<li class="icon solid fa-phone">zoom: jingwora@gmail.com</li>
+								<li> <img src="images/jingwora_02.jpg" width="200" /> </li>
+								<li class="icon solid fa-home"> Tokyo Japan </li>
 								<li class="icon solid fa-envelope"><a href="mailto: jingwora@gmail.com"></a>jingwora@gmail.com</a></li>
 								<li class="icon brands fa-twitter"><a href="https://twitter.com/jingwora" target=”_blank”>twitter.com/jingwora </a></li>
 								<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/Jingwora-107661677731914/" target=”_blank”>facebook.com/jingwora</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/kritdikoon-woraitthinan-086276101/" target=”_blank”>linkedin: kritdikoon-woraitthinan</a></li>
+								<li> <img src="images/qrcode.png" width="100" /> </li>
 							</ul>
 
 							<div style="
@@ -127,6 +124,7 @@
 							</ul>
 						</div>
 					</section>
+
 			</div>
 
 
