--- a/skills.html
+++ b/skills.html
@@ -143,6 +143,22 @@
 						</section>
 
 					<!-- four -->
+
+					<section id="three" class="wrapper spotlight style3">
+						<div class="inner">
+							<img src="images/cloud_engineer.png" style="width:150px;" alt="" />
+							<div class="content">
+								<h2 class="major">as Cloud Engineer</h2>
+								<p>Design and build secured cloud structure to support BI and AI platform.</p>
+								<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)</p>
+								<p>Google (Cloud Storage, BigQuery)</p>
+								<a href="projects.html" class="special">Learn more</a>
+							</div>
+						</div>
+					</section>
+
+					<!-- Five -->
+
 					<section id="two" class="wrapper alt spotlight style2">
 						<div class="inner">
 							<img src="images/web_developer.png" style="width:150px;" alt="" />
@@ -159,21 +175,8 @@
 								<a href="projects.html" class="special">Learn more</a>
 							</div>
 						</div>
-					</section>
-						
-					<!-- Five -->
-					<section id="three" class="wrapper spotlight style3">
-						<div class="inner">
-							<img src="images/cloud_engineer.png" style="width:150px;" alt="" />
-							<div class="content">
-								<h2 class="major">as Cloud Engineer</h2>
-								<p>Design and build secured cloud structure to support BI and AI platform.</p>
-								<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)</p>
-								<p>Google (Cloud Storage, BigQuery)</p>
-								<a href="projects.html" class="special">Learn more</a>
-							</div>
-						</div>
-					</section>
+					</section>					
+
 
 					<!-- Size -->
 					<section id="two" class="wrapper alt spotlight style2">
@@ -189,7 +192,7 @@
 											<td>
 												<a href="https://www.worksid.co.jp/" target="_blank">
 													Works ID Co., Ltd. &#127760;</a> Japan <br>
-												Role: BI Developer, Data Scientist, Cloud Engineer<br>
+												Role: AI BI Cloud Developer<br>
 												4 years	(Present)										
 											</td>
 										</tr>
@@ -211,7 +214,7 @@
 									</tbody>
 								</table>
 
-								<h1>Certification</h1>
+								<h1>Certifications</h1>
 								<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/azure-data-scientist-associate-600x600.png" style="width:150px;" alt="" />
 								<img src="images/Badges/azure-ai-engineer-600x600.png" style="width:150px;" alt="" />
