--- a/skills.html
+++ b/skills.html
@@ -144,8 +144,9 @@
 
 					<!-- four -->
 
-					<section id="three" class="wrapper spotlight style3">
+					<section id="four" class="wrapper alt spotlight style4">
 						<div class="inner">
+
 							<img src="images/cloud_engineer.png" style="width:150px;" alt="" />
 							<div class="content">
 								<h2 class="major">as Cloud Engineer</h2>
@@ -155,11 +156,11 @@
 								<a href="projects.html" class="special">Learn more</a>
 							</div>
 						</div>
-					</section>
+					</section>	
 
-					<!-- Five -->
+					<!-- Five -->			
 
-					<section id="two" class="wrapper alt spotlight style2">
+					<section id="five" class="wrapper spotlight style5">
 						<div class="inner">
 							<img src="images/web_developer.png" style="width:150px;" alt="" />
 							<div class="content">
@@ -175,7 +176,7 @@
 								<a href="projects.html" class="special">Learn more</a>
 							</div>
 						</div>
-					</section>					
+					</section>
 
 
 					<!-- Size -->
