--- a/knowledge.html
+++ b/knowledge.html
@@ -83,7 +83,11 @@
 										<h2 class="major" >Knowledge</h2>
 										<p>Collections of resources related to data analysis, artificial intelligent, business intelligents and more...</p>
 										<br>
-						
+
+								    <h1>📓 KM</h1>
+									<a href="KM\KM\Bioinformatics.md" target="_blank">Link</a>
+
+									<br><br>
 
 									<section>
 										<h1>📗 Docs: Cloud</h1>
