--- a/knowledge.html
+++ b/knowledge.html
@@ -83,10 +83,13 @@
 										<h2 class="major" >Knowledge</h2>
 										<p>Collections of resources related to data analysis, artificial intelligent, business intelligents and more...</p>
 										<br>
+										<hr>
 
 								    <h1>📓 KM</h1>
-									<a href="KM\KM\Bioinformatics.md" target="_blank">Link</a>
-
+									Access my Second Brain Notes 
+									<a href="https://github.com/jingwora/jingwora.github.io/tree/master/KM" target="_blank">🌐</a>
+									<br>
+									<hr>
 									<br><br>
 
 									<section>
