--- a/skills.html
+++ b/skills.html
@@ -311,8 +311,8 @@
 										
 											<img src="images/kaggle-expert-w@192.png" style="width:50px;" alt="" /> 
 											Competition Expert  <br>
-											<font size="+2">RANK 1,149</font><br>
-											<br>
+											<font size="+2">RANK 1,187</font>  (Highest 1,149) 
+											<br> <br>
 
 											<div class="table-wrapper">
 												<table class="alt">
@@ -359,7 +359,20 @@
 																<a href="https://www.kaggle.com/competitions/ubiquant-market-prediction" target="_blank">
 																	Ubiquant Market Prediction &#127760;</a>
 																 (Make predictions against future market data)
-															    <br> [Tabular Data] [Timeseries]
+															    <br> [Tabular Data] [Timeseries] [Regression]
+															</td>
+													    </tr>
+
+														<tr>
+															<td>
+															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
+															  <br> Bronze
+															</td>
+														    <td>
+																<a href="https://www.kaggle.com/competitions/amex-default-prediction" target="_blank">
+																	American Express - Default Prediction &#127760;</a>
+																 (Predict if a customer will default in the future)																 )
+															    <br> [Tabular Data] [Timeseries] [Classification]
 															</td>
 													    </tr>
 
