--- a/skills.html
+++ b/skills.html
@@ -216,9 +216,14 @@
 								</table>
 
 								<h1>Certifications</h1>
-								<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:150px;" alt="" />
-								<img src="images/Badges/azure-data-scientist-associate-600x600.png" style="width:150px;" alt="" />
-								<img src="images/Badges/azure-ai-engineer-600x600.png" style="width:150px;" alt="" />
+								<a href="https://learn.microsoft.com/ja-jp/certifications/azure-enterprise-data-analyst-associate/" target="_blank">
+									<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:150px;" alt="" /> </a>
+
+									<a href="https://learn.microsoft.com/ja-jp/certifications/azure-data-scientist/" target="_blank">
+										<img src="images/Badges/azure-data-scientist-associate-600x600.png" style="width:150px;" alt="" /> </a>
+
+										<a href="https://learn.microsoft.com/ja-jp/certifications/azure-ai-engineer/" target="_blank">
+											<img src="images/Badges/azure-ai-engineer-600x600.png" style="width:150px;" alt="" /> </a>
                                 <br><br>
 								<img src="images/Badges/azure-fundamentals-600x600 (1).png" style="width:100px;" alt="" />
 								<img src="images/Badges/azure-data-fundamentals-600x600.png" style="width:100px;" alt="" />
@@ -226,7 +231,10 @@
 								<img src="images/Badges/CERT-Fundamentals-Power-Platform.png" style="width:100px;" alt="" />
 								<img src="images/Badges/security-compliance-and-identity-fundamentals-600x600.png" style="width:100px;" alt="" />
 								<br><br>
-								<img src="images/Badges/UiPath-Certification_RPA-Fundamental.png" style="width:110px;" alt="" />
+								<a href="https://www.databricks.com/learn/certification/machine-learning-professional" target="_blank">
+									<img src="images/Badges/professional-badge-ml.svg" style="width:110px;" alt="" /> </a>
+									<br><br>
+									<img src="images/Badges/UiPath-Certification_RPA-Fundamental.png" style="width:110px;" alt="" />
 								<br><br><br>
 
 								<section>
