--- a/skills.html
+++ b/skills.html
@@ -216,6 +216,11 @@
 								</table>
 
 								<h1>Certifications</h1>
+
+								<a href="https://www.databricks.com/learn/certification/machine-learning-professional" target="_blank">
+									<img src="images/Badges/professional-badge-ml.svg" style="width:110px;" alt="" /> </a>
+									<br><br>
+
 								<a href="https://learn.microsoft.com/ja-jp/certifications/azure-enterprise-data-analyst-associate/" target="_blank">
 									<img src="images/Badges/CERT-Associate-Data-Analyst-600x600.png" style="width:150px;" alt="" /> </a>
 
@@ -231,11 +236,8 @@
 								<img src="images/Badges/CERT-Fundamentals-Power-Platform.png" style="width:100px;" alt="" />
 								<img src="images/Badges/security-compliance-and-identity-fundamentals-600x600.png" style="width:100px;" alt="" />
 								<br><br>
-								<a href="https://www.databricks.com/learn/certification/machine-learning-professional" target="_blank">
-									<img src="images/Badges/professional-badge-ml.svg" style="width:110px;" alt="" /> </a>
-									<br><br>
 									<img src="images/Badges/UiPath-Certification_RPA-Fundamental.png" style="width:110px;" alt="" />
-								<br><br><br>
+								<br><br>
 
 								<section>
 									<h1>Technical Training</h1>
@@ -319,7 +321,7 @@
 										
 											<img src="images/kaggle-expert-w@192.png" style="width:50px;" alt="" /> 
 											Competition Expert  <br>
-											<font size="+2">RANK 1,000</font>  (Highest 1,000) 
+											<font size="+2">RANK 856</font>  
 											<br> <br>
 
 											<div class="table-wrapper">
@@ -331,6 +333,46 @@
 														</tr>
 													</thead>
 													<tbody>
+
+														<tr>
+															<td>
+															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
+															  <br> Bronze
+															</td>
+														    <td>
+																<a href="https://www.kaggle.com/competitions/open-problems-multimodal" target="_blank">
+																	Ubiquant Market Prediction &#127760;</a>
+																 (Predictions DNA, RNA & protein measurements co-vary in single cells)
+															    <br> [Tabular Data] [DNA] [Regression]
+															</td>
+													    </tr>
+														
+														<tr>
+															<td>
+															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
+															  <br> Bronze
+															</td>
+														    <td>
+																<a href="https://www.kaggle.com/competitions/ubiquant-market-prediction" target="_blank">
+																	Ubiquant Market Prediction &#127760;</a>
+																 (Make predictions against future market data)
+															    <br> [Tabular Data] [Timeseries] [Regression]
+															</td>
+													    </tr>
+
+														<tr>
+															<td>
+															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
+															  <br> Bronze
+															</td>
+														    <td>
+																<a href="https://www.kaggle.com/competitions/amex-default-prediction" target="_blank">
+																	American Express - Default Prediction &#127760;</a>
+																 (Predict if a customer will default in the future)																 )
+															    <br> [Tabular Data] [Timeseries] [Classification]
+															</td>
+													    </tr>
+
 
 														<tr>
 															<td>
@@ -357,32 +399,6 @@
 																<br> [Computer Vision] [Image Classification]
 														    </td>
 														</tr>
-
-														<tr>
-															<td>
-															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
-															  <br> Bronze
-															</td>
-														    <td>
-																<a href="https://www.kaggle.com/competitions/ubiquant-market-prediction" target="_blank">
-																	Ubiquant Market Prediction &#127760;</a>
-																 (Make predictions against future market data)
-															    <br> [Tabular Data] [Timeseries] [Regression]
-															</td>
-													    </tr>
-
-														<tr>
-															<td>
-															  <img src="images/kaggle-bronzel@1x.png" style="width:30px;" alt="" /> 
-															  <br> Bronze
-															</td>
-														    <td>
-																<a href="https://www.kaggle.com/competitions/amex-default-prediction" target="_blank">
-																	American Express - Default Prediction &#127760;</a>
-																 (Predict if a customer will default in the future)																 )
-															    <br> [Tabular Data] [Timeseries] [Classification]
-															</td>
-													    </tr>
 
 												   </tbody>
 											    </table>
