--- a/skills.html
+++ b/skills.html
@@ -341,7 +341,7 @@
 															</td>
 														    <td>
 																<a href="https://www.kaggle.com/competitions/open-problems-multimodal" target="_blank">
-																	Ubiquant Market Prediction &#127760;</a>
+																	Open Problems - Multimodal Single-Cell Integration &#127760;</a>
 																 (Predictions DNA, RNA & protein measurements co-vary in single cells)
 															    <br> [Tabular Data] [DNA] [Regression]
 															</td>
