--- a/skills.html
+++ b/skills.html
@@ -329,7 +329,7 @@
 													<thead>
 														<tr>
 															<th>Medals</th>
-															<th>Competitions</th>
+															<th>Kaggle Competitions</th>
 														</tr>
 													</thead>
 													<tbody>
@@ -393,10 +393,10 @@
 																<br> Bronze
 															</td>
 															<td>
-																<a href="https://www.kaggle.com/c/happy-whale-and-dolphin" target="_blank">
-																	 Happywhale - Whale and Dolphin Identification &#127760;</a>
-																	 (Identify whales and dolphins by unique characteristics)
-																<br> [Computer Vision] [Image Classification]
+																<a href="https://www.kaggle.com/competitions/open-problems-multimodal" target="_blank">
+																	Open Problems - Multimodal Single-Cell Integration &#127760;</a>
+																 (Predictions DNA, RNA & protein measurements co-vary in single cells)
+																<br> [Tabular Data] [DNA] [Regression]
 														    </td>
 														</tr>
 
@@ -408,6 +408,38 @@
 									</tbody>
 								</table>
 
+								<div class="table-wrapper">
+									<table class="alt">
+										<thead>
+											<tr>
+												<th>Medals</th>
+												<th>Nishika Competitions</th>
+											</tr>
+										</thead>
+										<tbody>
+
+											<tr>
+												<td>
+												  <img src="images/kaggle-silver.png" style="width:30px;" alt="" /> 
+												  <br> Silver
+												</td>
+												<td>
+													<a href="https://www.nishika.com/competitions/hate/summary" target="_blank">
+														Hate Speech Detection &#127760;</a>
+														 (Detecting hate speech from bulletin board posts)
+													<br> [NLP] [Text Classification-Japanese]
+												</td>
+											</tr>
+
+									   </tbody>
+									</table>
+								 </div>
+
+							</tr>
+						</tbody>
+					</table>
+
+
 
 								<h1>Literacy</h1>
 								<table class="alt">
@@ -416,7 +448,7 @@
 											<td>
 											<b>Language</b> <br>
 											Thai：               ★ ★ ★ ★ ★　（NATIVE）<br>
-											English：            ★ ★ ★ ★ <span style="color: gray;">★</span> （TOEIC 980） <br>
+											English：            ★ ★ ★ ★ <span style="color: gray;">★</span> （TOEIC 905） <br>
 											Japanese：           ★ ★ ★    <span style="color: gray;"> ★ ★</span> （JLPT N2） <br>
 											Chinese (Mandarin)： ★ ★ <span style="color: gray;"> ★ ★ ★</span>	（HSK LV4）
 										</tr>
