--- a/skills.html
+++ b/skills.html
@@ -393,10 +393,10 @@
 																<br> Bronze
 															</td>
 															<td>
-																<a href="https://www.kaggle.com/competitions/open-problems-multimodal" target="_blank">
-																	Open Problems - Multimodal Single-Cell Integration &#127760;</a>
-																 (Predictions DNA, RNA & protein measurements co-vary in single cells)
-																<br> [Tabular Data] [DNA] [Regression]
+																<a href="https://www.kaggle.com/competitions/happy-whale-and-dolphin" target="_blank">
+																	Happywhale - Whale and Dolphin Identification &#127760;</a>
+																 (Identify whales and dolphins by unique characteristics)																 )
+																<br> [Computer Vision] [Image Classification]
 														    </td>
 														</tr>
 
