--- a/skills.html
+++ b/skills.html
@@ -395,7 +395,7 @@
 															<td>
 																<a href="https://www.kaggle.com/competitions/happy-whale-and-dolphin" target="_blank">
 																	Happywhale - Whale and Dolphin Identification &#127760;</a>
-																 (Identify whales and dolphins by unique characteristics)																 )
+																 (Identify whales and dolphins by unique characteristics)
 																<br> [Computer Vision] [Image Classification]
 														    </td>
 														</tr>
