--- a/skills.html
+++ b/skills.html
@@ -473,8 +473,10 @@
 											Recommendation System: scikit-surprise<br>
 											Optimization: PuLP 
 										    </p>
-											PySpark ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
-											R       ★ <span style="color: gray;">★ ★ ★ ★</span> <br>
+											Python ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
+											PySpark ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											C ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											R       ★ ★ <span style="color: gray;"> ★ ★ ★</span> <br>
 											SQL     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											HTML    ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											CSS     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
