--- a/skills.html
+++ b/skills.html
@@ -455,20 +455,15 @@
 											<td>
 											<b>Computer Language</b> <br>
 											Python  ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
-											<p style="color: skyblue;">
-											Data preparation: Numpy, scipy, Pandas<br>
-											Machine Learning: Sci-kit learn, Statsmodels, xgboost, lightgbm, Tensorflow, Keras <br>
-											Visualization: Matplotlib, seaborn<br> 
-											Image processing: OpenCV, Pillow <br>
-											Web Scrapping: Beautiful Soup 4, Selenium<br>
-											NLP: Natural Language Toolkit (NLTK), Mecab, janome, wordcloud<br>
-											Sound Processing: librosa <br>
-											Recommendation System: scikit-surprise<br>
-											Optimization: PuLP 
-										    </p>
-											PySpark ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
-											C ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											<p style="color: skyblue;"> Data processing, Visualization, Machine Learning</p>
+
+											PySpark ★ ★ ★ ★ <span style="color: gray;">★</span> <br> 
+											<p style="color: skyblue;"> Big Data: Data Engineer & Data Science</p>
+
 											R       ★ ★ <span style="color: gray;"> ★ ★ ★</span> <br>
+											<p style="color: skyblue;"> Statistical analysis and visualization</p>
+
+											C ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
 											SQL     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											HTML    ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											CSS     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
