--- a/skills.html
+++ b/skills.html
@@ -460,7 +460,7 @@
 											PySpark ★ ★ ★ ★ <span style="color: gray;">★</span> <br> 
 											<p style="color: skyblue;"> Big Data: Data Engineer & Data Science</p>
 
-											R       ★ ★ <span style="color: gray;"> ★ ★ ★</span> <br>
+											R       ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
 											<p style="color: skyblue;"> Statistical analysis and visualization</p>
 
 											C ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
