--- a/skills.html
+++ b/skills.html
@@ -455,15 +455,15 @@
 											<td>
 											<b>Computer Language</b> <br>
 											Python  ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
-											<p style="color: skyblue;"> Data processing, Visualization, Machine Learning</p>
+											<p style="color: skyblue;"> Data processing, Visualization, Machine Learning, Web scrapping</p>
 
 											PySpark ★ ★ ★ ★ <span style="color: gray;">★</span> <br> 
-											<p style="color: skyblue;"> Big Data: Data Engineer & Data Science</p>
+											<p style="color: skyblue;"> Big Data: Data Engineer, Data Science, MLOps</p>
 
 											R       ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
-											<p style="color: skyblue;"> Statistical analysis and visualization</p>
+											<p style="color: skyblue;"> Statistical analysis, Visualization</p>
 
-											C ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
+											C       ★ ★ ★ <span style="color: gray;">★ ★</span> <br>
 											SQL     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											HTML    ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											CSS     ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
