--- a/skills.html
+++ b/skills.html
@@ -453,7 +453,8 @@
 										</tr>
 										<tr>
 											<td>
-											<b>Computer Language</b> <br>
+											<b>Programming Language</b> <br> 
+											<br>
 											Python  ★ ★ ★ ★ <span style="color: gray;">★</span> <br>
 											<p style="color: skyblue;"> Data processing, Visualization, Machine Learning, Web scrapping</p>
 
