--- a/skills.html
+++ b/skills.html
@@ -440,6 +440,22 @@
 
 								
 
+								<h1>Research Paper</h1>
+								<table class="alt">
+									<tbody>
+										<tr>
+											<td>
+											<span style="font-weight:bold;">Does novel food differ in cultural contexts? A comparative analysis of Japanese and Singaporean cultural acceptance through text analysis of mass media</span> <br>
+											Current Research in Food Science <br>
+											2023-01-11 | Journal article <br>
+											DOI: <a href="https://doi.org/10.1016/j.crfs.2023.100436" target="_blank"> 10.1016/j.crfs.2023.100436 </a> <br>
+											CONTRIBUTORS: Hikaru Matsuoka; Yuta Uchiyama; Kritdikoon Woraitthinan; Ryo Kohsaka
+											</td>
+										</tr>
+									</tbody>
+								</table>
+
+
 								<h1>Literacy</h1>
 								<table class="alt">
 									<tbody>
@@ -472,6 +488,7 @@
 										</tr>
 									</tbody>
 								</table>
+
 
 								<p>App・System</p>
 								<table class="alt">
