--- a/skills.html
+++ b/skills.html
@@ -576,6 +576,21 @@
 								</tbody>
 							</table>
 
+							<p>GitHub</p>
+							<table class="alt">
+								<tbody>
+									<tr>
+										<td>
+											<a href="https://github.com/jingwora"
+												target="_blank"> GitHub: Repositories</a> 
+											<br>
+	
+											<br>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+
 						</div>
 					</div>
 				</section>
