--- a/contents/projects/predict-demo/ai.html
+++ b/contents/projects/predict-demo/ai.html
@@ -77,7 +77,7 @@
 
     <center>
       <br><br><br>
-      <p>Odds Prediction</p><br>
+      <h1>Odds Prediction</h1><br>
       <p>Input 17 variables</p><br>
       <p>Output 3 probabilities (W:L:D)</p><br>
 
@@ -102,7 +102,7 @@
     <center>v17: <input id="v17" value="0.73623425"></center> <br>
     <center><button onclick="make_prediction()">predict</button></center>
     <br>
-    <center><input id="answer"></center>
+    <center><input id="answer" size="50"></center>
     <br> <br>
   </body>
 
