--- a/contents/projects/predict-demo/ai.html
+++ b/contents/projects/predict-demo/ai.html
@@ -8,8 +8,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="AI Digits Recognition" />
-    <meta name="keywards" content="AI Digits Recognition" />
+    <meta name="description" content="AI Odds Prediction demo" />
+    <meta name="keywards" content="AI Odds Prediction demo" />
     <meta name="author" content="Kritdikoon Woraitthinan" />
     <title>AI Digits Recognition</title>
     <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css" />
