--- a/contents/projects/predict-demo/ai.html
+++ b/contents/projects/predict-demo/ai.html
@@ -11,7 +11,7 @@
     <meta name="description" content="AI Odds Prediction demo" />
     <meta name="keywards" content="AI Odds Prediction demo" />
     <meta name="author" content="Kritdikoon Woraitthinan" />
-    <title>AI Digits Recognition</title>
+    <title>AI Odds Prediction demo</title>
     <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css" />
     <link rel="icon" type="image/png" href="/images/J_favicon/favicon.ico" />
 
